--- a/Coding projects/pastern/templates/index.html
+++ b/Coding projects/pastern/templates/index.html
@@ -85,5 +85,19 @@
     });
   </script>
 
+
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <p>&copy; 2025 Pastern. All rights reserved.</p>
+    <p>
+      <a href="/about">About</a> |
+      <a href="/contact">Contact</a> |
+    </p>
+  </footer>
+
+
+
+
 </body>
 </html>
